--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@ h1, h2, h3, h4, h5, h6 {
     <a href="#home" class="w3-bar-item w3-button">Heilig-Geist-Apotheke Rosenheim</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+      <a href="#about" class="w3-bar-item w3-button">Willkommen</a>
+      <a href="#menu" class="w3-bar-item w3-button">Kompetenzen</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#contact" class="w3-bar-item w3-button">Bestellservice</a>
     </div>
   </div>
 </div>
